--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <script src="smallweb-subway.js"></script>
+  <script src="webring.js"></script>
   <smallweb-subway></smallweb-subway>
 </body>
